--- a/App/view/cadastro-usuario.html
+++ b/App/view/cadastro-usuario.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="shortcut icon" href="/img/logoTitle.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/logoTitle.png" type="image/x-icon">
     <title>Cadastro</title>
 </head>
 <body>
@@ -20,9 +20,12 @@
         <input type="text" class="form-control" id="nome" name="nome" placeholder="Nome" required> 
 
         <input type="text" class="form-control" id="celular" name="celular" placeholder="Celular" required> 
+        
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
         <input type="email" class="form-control" id="email" name="email" placeholder="E-mail" required> 
-
+        <div id='resposta'></div>
+        
         <input type="password" class="form-control" id="senha" name="senha"  placeholder="Senha" required> 
 
         <button class="btn-login">Cadastrar</button>
