--- a/App/view/login.html
+++ b/App/view/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="shortcut icon" href="/img/logoTitle.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/logoTitle.png" type="image/x-icon">
     <title>Login</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
 
         <h1>Faça seu login</h1>
 
-        <form method="POST" action="/login/check" id="form" >
+        <form method="POST" action="http://localhost/login_mvc/login/check" id="form" >
 
             <input type="hidden" name="acao" value="verificar">
         
