--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,35 +8,36 @@ body{
     font-size: 19px;
     color: #FFF;
     font-family: 'Arial';
+    background: url(https://img.freepik.com/fotos-gratis/fundo-de-grade-digital-futurista-em-azul-escuro-abstrato_53876-104051.jpg?w=740&t=st=1674827129~exp=1674827729~hmac=16b63d19b3dfe446836532bb82f85f8d35c60a835a7844a1cbdbfde0c6088b35);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
     
 }
 
 .box_login{
-    width: 500px;
+    width: 450px;
     height: 560px;
-    background-color: rgba(0, 74, 97, 0.822);
+    background-color: rgba(255, 255, 255, 0);
     border: 0;
     border-radius: 10px 10px 10px 10px;
 
 }
 
 .box_login .capa{
-    height: 200px;
-    background: url(../img/Logo.jpeg);
+    height: 190px;
+    background: url(../img/logo..png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
     border-radius: 10px 10px 0px 0px;
-
 }
 
 h1{
     font-size: 24px;
     color: rgb(255, 255, 255);
     text-align: center;
-    margin: 10px 0px 15px 0px;
+    margin: 0px 0px 25px 0px;
     font-family: 'Arial';
     font-weight: 500;
-
 }
 
 form input{
@@ -45,13 +46,14 @@ form input{
     padding: 15px 15px;
     border-radius: 10px;
     border: none;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin-top: 7px;
+    margin-bottom: 7px;
     color: rgb(251, 148, 3);
-
 }
-textarea:focus, input:focus {
+
+input:focus, input:hover {
     box-shadow: 3px 2px 2px 3px rgba(253, 130, 23, 0.854);
+    transform: translateY(1px);
     outline: 0;
 }
 
@@ -61,51 +63,23 @@ form .btn-login{
     color: #FFF;
     padding: 15px 15px;
     margin-top: 15px;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
     font-size: 20px;
     font-weight: 600;
     border-radius: 6px;
     display: inline-block;
-    background-color: rgba(0, 0, 0, 0.407);
+    background-color: #fa8602f4;
     cursor: pointer;
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.211), 0 2px 10px 0 rgba(0, 0, 0, 0.342);
     -webkit-transition: all 300ms ease;
     transition: all 300ms ease;
     border:none;
     
-
 }
+
 .btn-login:hover{
-    background-color: #fa8602f4;
+    background-color: #ff9100c2;
     transform: translateY(2px);
-
-}
-
-.btn-submit {
-
-    width: 40%;
-    color: #fff;
-    font-size: 1.2em;    
-    text-align: center;
-    padding: 15px 35px;
-    border-radius: 6px;
-    display: inline-block;
-    background-color: rgba(0, 0, 0, 0.541);
-    cursor: pointer;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.06), 0 2px 10px 0 rgba(0,0,0,0.07);
-    -webkit-transition: all 300ms ease;
-    transition: all 300ms ease;
-    border:none;
-
-}
-
-.btn-submit:hover {
-    
-    background-color: #1c3c77e1;
-    transform: translateY(2px);
-    box-shadow: 0 1px 1px 0 rgba(0,0,0,0.10),
-    0 1px 1px 0 rgba(0,0,0,0.08);
-
 }
 
 .msg_error{
@@ -119,11 +93,11 @@ form .btn-login{
 
 .letra-cadastro{
     font-size: 17px;
-    color: #001415f4;
+    color: #fdb352f4;
     text-decoration: none;
 }
 
 .letra-cadastro:hover{
-    color: #fa8602f4;
+    color: #80d7ff;
 }
 
